Fix Export Product