@@ -479,6 +479,11 @@ public class ProductServiceImpl implements ProductService {
     Sort.Direction direction = Sort.Direction.fromString(sortDirection);
     Pageable pageable = PageRequest.of(pageNo, pageSize, Sort.by(direction, sortBy));
 
+    specification =
+            specification.and(
+                    (root, query, criteriaBuilder) ->
+                            criteriaBuilder.notEqual(root.get("status"), "DA_XOA"));
+
     // Keyword search for product name, registration code, and active ingredient
     if (keyword.isPresent()) {
       String searchPattern = "%" + keyword.get().toLowerCase() + "%";
@@ -524,6 +529,7 @@ public class ProductServiceImpl implements ProductService {
               (root, query, criteriaBuilder) ->
                   criteriaBuilder.equal(root.get("status"), status.get()));
     }
+
     return productRepository
         .findAll(specification, pageable)
         .map(productMapper::convertToProductBaseDTO);
@@ -686,16 +692,17 @@ public class ProductServiceImpl implements ProductService {
   @Override
   public ByteArrayInputStream exportFile() throws IOException {
     String[] headers = {
-      "Regation Code",
-      "Product Name",
-      "Active Ingredient",
-      "Excipient",
-      "Formulation",
-      "Category",
-      "Type",
-      "Base Unit",
-      "Manufacturer",
-      "Sell Price"
+      "Mã đăng ký",
+      "Tên sản phẩm",
+      "Hoạt chất",
+      "Bào chế",
+      "Tá dược",
+      "Nhóm sản phẩm",
+      "Loại sản phẩm",
+      "Đơn vị cơ sở",
+      "Nhà sản xuất",
+      "Giá nhập",
+      "Giá bán"
     };
 
     // Row mapper to convert a Product object to a list of cell values
@@ -714,6 +721,7 @@ public class ProductServiceImpl implements ProductService {
           cellValues.add(product.getBaseUnit() != null ? product.getBaseUnit() : "");
           cellValues.add(
               product.getManufacturerName() != null ? product.getManufacturerName() : "");
+          cellValues.add(product.getInboundPrice() != null ? product.getInboundPrice().toString() : "");
           cellValues.add(product.getSellPrice() != null ? product.getSellPrice().toString() : "");
 
           return cellValues;
@@ -721,9 +729,11 @@ public class ProductServiceImpl implements ProductService {
 
     // Fetch product data
     List<ProductBaseDTO> products =
-        productRepository.findAll().stream()
-            .map(productMapper::convertToProductBaseDTO)
-            .collect(Collectors.toList());
+        searchProducts(0, Integer.MAX_VALUE, "id", "ASC",
+                Optional.ofNullable(null), Optional.ofNullable(null),
+                Optional.ofNullable(null), Optional.ofNullable(null),
+                Optional.ofNullable(null))
+                .stream().toList();
 
     // Export data using utility
     try {
